src/App.scss
$primary: #344242;
$secondary: #a6bbbb;

* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
body {
	margin: 0;
	padding: 0;
	cursor: default;
	letter-spacing: 0.04em;
	font-family: 'Oswald', sans-serif;
}

/* Map */

#map {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 30vw;
	width: 70vw;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
}

/* SideBar */

::-webkit-scrollbar {
	width: 0.25em;
	border: none;
	background: inherit;
}
::-webkit-scrollbar-thumb {
	height: 7em;
	background: $secondary;
	border-radius: 0;
}

.sidebar {
	position: absolute;
	top: 0;
	left: 0;
	overflow: hidden;
	width: 30vw;
	height: 100%;
}

.sidebar__input {
	padding: 0.8em 0.2em;
	width: 100%;
	border: none;
	outline: none;
	font-size: 1.3em;
	color: $primary;
	font-family: 'Oswald', sans-serif;
}

::-webkit-input-placeholder {
	/* Chrome/Opera/Safari */
	color: $primary;
	font-family: 'Oswald', sans-serif;
}
::-moz-placeholder {
	/* Firefox 19+ */
	color: $primary;
	font-family: 'Oswald', sans-serif;
}
:-ms-input-placeholder {
	/* IE 10+ */
	color: $primary;
	font-family: 'Oswald', sans-serif;
}
:-moz-placeholder {
	/* Firefox 18- */
	color: $primary;
	font-family: 'Oswald', sans-serif;
}

.list {
	background: $primary;
	color: #fff;
	height: 100vh;
	overflow-y: auto;
	padding-bottom: 4em;
}

.list__error {
	padding: 0.5em;
	background: $secondary;
}

.list__item {
	cursor: pointer;
	word-wrap: break-word;
	padding: 0.5em;
	border-bottom: $secondary solid 0.1em;
	transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.list__item:hover {
	background: $secondary;
	color: $primary;
	.list__item__coords {
		color: $primary;
		font-size: 0.8em;
	}
}

.list__item__name {
	font-weight: 550;
	font-size: 1.2em;
}

.list__item__img {
	width: 4vw;
}
.list__item__coords {
	color: $secondary;
	font-size: 0.8em;
}
.current {
	background: $secondary;
	color: $primary;
	.list__item__coords {
		color: $primary;
		font-size: 0.8em;
	}
}

/* Popup */

.mapboxgl-popup-content {
	padding: 0;
	font-family: 'Oswald', sans-serif;
}

.popup__title {
	background: $primary;
	text-align: center;
	color: #fff;
	border-radius: 3px 3px 0 0;
	padding: 0.4em;
	display: block;
	font-size: 1.3em;
	font-weight: 700;
}
.popup__content {
	padding: 0.5em;
	font-size: 1.05em;
}

@media only screen and (max-width: 768px) {
	/* SideBar */
	.sidebar__input {
		padding: 0.2em 0.1em;
	}
	.list {
		padding-bottom: 2em;
	}
	.list__error {
		font-size: 0.8em;
	}
	.list__item__name {
		font-size: 0.8em;
	}
	.list__item__img {
		width: 6vw;
	}
	.list__item__coords {
		font-size: 0.7em;
	}
	::-webkit-input-placeholder {
		/* Chrome/Opera/Safari */
		font-size: 0.6em;
	}
	::-moz-placeholder {
		/* Firefox 19+ */
		font-size: 0.6em;
	}
	:-ms-input-placeholder {
		/* IE 10+ */
		font-size: 0.6em;
	}
	:-moz-placeholder {
		/* Firefox 18- */
		font-size: 0.6em;
	}
}

